--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -21,7 +21,7 @@
     <string name="action_status">Status</string>
     <string name="action_refresh">Refresh</string>
     <string name="action_accessibility">Accessibility</string>
-    <string name="action_settings">Settings</string>
+    <string name="action_preferences">Preferences</string>
     
     <string name="timerVal">00:00:00</string>
     <string name="freeheapVal">0</string>
