--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -32,14 +32,15 @@
     <string name="pref_register">Register Preferences</string>
 
     <string name="pref_auto_register">Auto Register</string>
-    <string name="pref_auto_register_summary">Auto Register</string>
-
-    <string name="pref_auto_register_schedule">Auto Register Schedule</string>
-    <string name="pref_auto_register_schedule_summary">Auto Register Schedule</string>
-
-    <string name="pref_time_test">Time Preferences</string>
-    <string name="pref_time_test_summary">Time Preferences</string>
+    <string name="pref_auto_register_summary_on">Auto register is enabled</string>
+    <string name="pref_auto_register_summary_off">Auto register is disabled</string>
     
+    <string name="pref_auto_register_date">Auto Register Date</string>
+    <string name="pref_auto_register_date_summary">Auto Register Date</string>
+
+    <string name="pref_auto_register_time">Auto Register Time</string>
+    <string name="pref_auto_register_time_summary">Auto Register Time</string>
+
     <string name="pref_ussd">USSD Preferences</string>
 
     <string name="pref_ussd_register">USSD Register Code</string>
