change receiveralarm to activityalarm

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -69,8 +69,8 @@
     <string name="edit">Edit</string>
     <string name="reset">Reset</string>
     <string name="cancel">Cancel</string>
-    
-    <string name="timeEdit">Alarm time input</string>
+    <string name="ignore">Ignore</string>
+    <string name="launch">Launch</string>
     
     <string name="accessibility_description">This service records pop ups sent by your mobile operator, and saves them in Globe Manager App. It is absolutely safe to use.</string>
 
