--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,36 +1,18 @@
-<?xml version="1.0" encoding="utf-8"?>
 <resources>
-
     <string name="app_name">Globe Manager</string>
-    <string name="activity_udp_message">UDP Scan</string>
-    <string name="activity_wifi_message">Wifi Scan</string>
-    <string name="activity_custom_message">Database Scan</string>
-    <string name="activity_video_message">Video</string>
-    <string name="activity_device_message">Device</string>
-    <string name="activity_settings_message">Settings</string>
     
-    <string name="connectStatus">Connected</string>
-    <string name="powerLabel">Play with the Switch</string>
-    <string name="powerStatus">Medium Text</string>
-    
-    <string name="action_search">Search</string>
-    <string name="action_wifi">Wifi</string>
-    <string name="action_custom">Custom</string>
-    <string name="action_alarm">Alarm</string>
+    <string name="action_refresh">Refresh</string>
     <string name="action_load_balance">Load Balance</string>
     <string name="action_point_balance">Point Balance</string>
     <string name="action_status">Status</string>
     <string name="action_activate_load">Activate Load</string>
     <string name="action_activate_point">Activate Point</string>
-    <string name="action_refresh">Refresh</string>
     <string name="action_accessibility">Accessibility</string>
     <string name="action_preferences">Preferences</string>
+    <string name="action_reset">Reset</string>
     
-    <string name="timerVal">00:00:00</string>
-    <string name="freeheapVal">0</string>
-    <string name="startButtonLabel">Start</string>
-    <string name="pauseButtonLabel">Pause</string>
-    <string name="wifiButtonLabel">OFF</string>
+    <string name="default_date">1970&#8211;01&#8211;01 00:00:00</string>
+    <string name="default_load">0.0</string>
     
     <string name="pref_register">Register Preferences</string>
 
@@ -46,21 +28,24 @@
 
     <string name="pref_ussd">USSD Preferences</string>
 
-    <string name="pref_ussd_register">USSD Register Code</string>
-    <string name="pref_ussd_register_summary">USSD Register Code</string>
+    <string name="pref_ussd_load_balance">USSD Load Balance Code</string>
+    <string name="pref_ussd_load_balance_summary">USSD Load Balance Code</string>
+
+    <string name="pref_ussd_point_balance">USSD Point Balance Code</string>
+    <string name="pref_ussd_point_balance_summary">USSD Point Balance Code</string>
 
     <string name="pref_ussd_status">USSD Status Code</string>
     <string name="pref_ussd_status_summary">USSD Status Code</string>
 
-    <string name="pref_ussd_balance">USSD Balance Code</string>
-    <string name="pref_ussd_balance_summary">USSD Balance Code</string>
+    <string name="pref_ussd_activate_load">USSD Activate Load Code</string>
+    <string name="pref_ussd_activate_load_summary">USSD Activate Load Code</string>
 
-    <string name="pref_send_report">Send crash reports</string>
-    <string name="pref_send_report_summary">Helps to fix bugs</string>
-    
-    <string name="pref_plug_profile">Plug Profile</string>
-    <string name="pref_update_setting">Update Settings</string>
-    
+    <string name="pref_ussd_activate_point">USSD Activate Point Code</string>
+    <string name="pref_ussd_activate_point_summary">USSD Activate Point Code</string>
+
+    <string name="pref_ussd_send_load">USSD Send Load Code</string>
+    <string name="pref_ussd_send_load_summary">USSD Send Load Code</string>
+
     <string name="add_sim">Add SIM</string>
     <string name="edit_sim">Edit SIM</string>
     <string name="view_sim">View SIM</string>
@@ -76,5 +61,4 @@
     <string name="launch">Launch</string>
     
     <string name="accessibility_description">This service records pop ups sent by your mobile operator, and saves them in Globe Manager App. It is absolutely safe to use.</string>
-
 </resources>
